# Cassettophone

./: .gitignore  LICENSE  README.md  api.py  assets_params.py  brainrot_cli.py  config.ini.sample  ffmpeg_sample_command  generators.py  main.py  pasi  pyproject.toml  requirements.txt  test.py  utils.py  video_processing_tests.py  video_utils.py
static/styles/: style.css
templates/: characters.html  choices.html  index.html  result.html
test_utils/: langer_script.json  lines_map.json  lines_map_test.json  lines_map_unit_test.json  subtitle.ass  test_subtitle.ass
test_utils/subtitles/: transcript.srt  transcript_test.srt
zonos/: model.py  utils.py
zonos/backbone/: _torch.py
