[project]
name = "Cassettophone"
version = "0.1.0"
description = "CLI Self Hosted Brainrot Generator"
readme = "README.md"
requires-python = "==3.13.0"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiohttp-socks==0.10.1",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "assemblyai==0.40.2",
    "attrs==25.3.0",
    "audioop-lts==0.2.1",
    "audioread==3.0.1",
    "babel==2.17.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "bottle==0.13.3",
    "brotli==1.1.0",
    "browser-cookie3==0.20.1",
    "bs4==0.0.2",
    "cairocffi==1.7.1",
    "cairosvg==2.8.1",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "cssselect2==0.8.0",
    "csvw==3.5.1",
    "curl-cffi==0.11.1",
    "cython==3.1.1",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.18",
    "dlinfo==2.0.0",
    "dtw-python==1.5.3",
    "duckduckgo-search==8.0.1",
    "ebooklib==0.19",
    "et-xmlfile==2.0.0",
    "fastapi==0.115.12",
    "ffmpegcv==0.3.18",
    "ffmpy==0.5.0",
    "filelock==3.18.0",
    "flask==3.1.1",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "g4f==0.5.2.2",
    "gradio==5.29.1",
    "gradio-client==1.10.1",
    "groovy==0.1.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.31.2",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "inflect==7.5.0",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "kanjize==1.6.0",
    "language-tags==1.2.0",
    "lazy-loader==0.4",
    "librosa==0.11.0",
    "llvmlite==0.44.0",
    "lxml==5.4.0",
    "lz4==4.4.4",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "more-itertools==10.7.0",
    "moviepy==2.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "mss==10.0.0",
    "multidict==6.4.3",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nodriver==0.46.0",
    "numba==0.61.2",
    "numpy==2.2.5",
    "odfpy==1.4.1",
    "ollama==0.4.8",
    "openai-whisper",
    "opencv-python==4.11.0.86",
    "openpyxl==3.1.5",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.2.3",
    "phonemizer==3.3.0",
    "pillow==10.4.0",
    "platformdirs==4.3.8",
    "plyer==2.1.0",
    "pooch==1.8.2",
    "primp==0.15.0",
    "proglog==0.1.12",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "proxy-tools==0.1.0",
    "pycairo==1.28.0; sys_platform == 'darwin'",
    "pycparser==2.22",
    "pycryptodome==3.22.0",
    "pycryptodomex==3.22.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydub==0.25.1",
    "pygments==2.19.1",
    "pyobjc-core==11.0; sys_platform == 'darwin'",
    "pyobjc-framework-cocoa==11.0; sys_platform == 'darwin'",
    "pyobjc-framework-quartz==11.0; sys_platform == 'darwin'",
    "pyobjc-framework-security==11.0; sys_platform == 'darwin'",
    "pyobjc-framework-webkit==11.0; sys_platform == 'darwin'",
    "pyparsing==3.2.3",
    "pypdf2==3.0.1",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "python-socks==2.7.1",
    "pytz==2025.2",
    "pywebview==5.4",
    "pyyaml==6.0.2",
    "questionary==2.1.0",
    "rdflib==7.1.4",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rfc3986==1.5.0",
    "rich==14.0.0",
    "rpds-py==0.24.0",
    "ruff==0.11.9",
    "safehttpx==0.1.6",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "segments==2.3.0",
    "semantic-version==2.10.0",
    "setuptools==80.6.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "soupsieve==2.7",
    "soxr==0.5.0.post1",
    "standard-aifc==3.13.0",
    "standard-chunk==3.13.0",
    "standard-sunau==3.13.0",
    "starlette==0.46.2",
    "sudachidict-full==20250129",
    "sudachipy==0.6.10",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tinycss2==1.4.0",
    "tokenizers==0.21.1",
    "tomlkit==0.13.2",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "typeguard==4.4.2",
    "typer==0.15.4",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "whisper-timestamped==1.15.8",
    "wrapt==1.17.2",
    "yarl==1.20.0",
    "mlx-whisper==0.4.2",
    "stable-ts",
    "ffmpeg-python>=0.2.0",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "dd985ac4b90cafeef8712f2998d62c59c3e62d22" }
stable-ts = { git = "https://github.com/jianfch/stable-ts" }
